welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:9: error: '=>' expected but integer literal found.
		case >=3 => gauche()
                       ^Poucet:10: error: '=>' expected but integer literal found.
		case <=2 => droite()
                       ^