welcome.lessons.welcome.loopdowhile.Poucet.scala.code
while (!sortieTrouvee()) {
	do {
		var nb = 0
		avance()
		if (estSurBiscuit()) {nb = nb + 1}
	} while (!croisement())
	nb match {
		case >=3 => gauche()
		case <=2 => droite()
	}
}
